# Feuerwehr-Web-Portal

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  crypto.rs  errors.rs  main.rs  pdf.rs  update_check.rs
backend/src/auth/: handlers.rs  middleware.rs  rate_limit.rs
backend/src/routes/: admin.rs  announcements.rs  articles.rs  auth.rs  calendar.rs  dienst_reports.rs  incident_types.rs  incidents.rs  integrations.rs  mod.rs  orders.rs  personal.rs  roles.rs  selfservice.rs  settings.rs  storage_locations.rs  termine.rs  timeclock.rs  vehicles.rs  verein.rs
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/js/: api.js  logo.js  main.js  pdf-generator.js  router.js  shell.js  utils.js
frontend/src/js/pages/: admin.js  articles.js  (+17 more)
frontend/src/scss/: _admin.scss  _articles.scss  _beschaffung.scss  _cards.scss  _clock.scss  _components.scss  _dashboard.scss  _fonts.scss  _forms.scss  _modal.scss  _personal.scss  _protokoll.scss  _tables.scss  _utilities.scss  _variables.scss  _vehicles.scss  main.scss
migrations/: 038_ical_token.sql  039_user_theme.sql  040_verein_mitglied_pause.sql  041_article_chargen.sql  042_zeiterfassung.sql  043_vehicle_types.sql  044_article_inspections.sql  045_time_entry_termin.sql  046_token_version.sql  047_storage_locations.sql  048_article_instances.sql  049_article_scan_tokens.sql  050_article_sets.sql  051_incident_type_categories_free.sql  052_article_categories.sql  053_dsgvo_stufe2.sql  054_ical_token_expiry.sql  055_incident_personnel_times.sql  056_integrations.sql  057_equipment_status.sql  058_dienst_reports.sql
