[package]
name = "feuerwehrhub"
version = "1.3.4"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "set-header"] }

# Datenbank
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }

# Serialisierung
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
bcrypt = "0.15"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
base64 = "0.21"

# E-Mail (SMTP)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# HTTP Client (Update-Check)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"

# PDF-Generierung
printpdf = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
governor = "0.6"
dashmap = "5"
validator = { version = "0.18", features = ["derive"] }
ed25519-dalek = "2"
hex = "0.4"

# Dependency-Pins (Workaround für heck 0.4.x + unicode-segmentation 1.12+ Inkompatibilität)
unicode-segmentation = "=1.11.0"
